--- a/.env-dev
+++ b/.env-dev
@@ -1,2 +1,3 @@
 PORT=5000
 MONGODB_URI=mongodb+srv://admin:admin@simple-auth.a6grlcb.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET=secret_key
